# ssys

./: .gitignore  23_MWC_recast_test.ant  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORRECTNESS_SPEC.md  DEVELOPMENT_NOTES.md  LICENSE  PARSER_TRUST_BOUNDARY.md  PUBLIC_API.md  README.md  RECASTING.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  TEST_MODELS.md  activate_dev_env.sh  all_recast_models.ant  all_test_models.ant  build_arxiv.sh  build_docs.sh  build_paper.sh  generate_test_model_tables.py  pyproject.toml  recast_models.py  setup_dev_env.sh
.github/workflows/: ci.yml  publish.yml  release-candidate.yml
biomodels_batch/: .gitignore  3_recast_batch.py  3_recast_batch_old.py  3b_validate_batch.py  4_analyze_results.py  5_rebuild_results_csv.py  6_collect_validated.py  7_generate_results_md.py  PARSING_ERRORS.md  README.md  RESULTS.md  TODO_BENCHMARK_ANALYSIS.md  check_methods.py  check_ode.py  config.py  debug_api.py  environment.yml  requirements.txt  run_benchmark.sh  step1_fetch.py  step2_filter.py  step3_recast.py  step4_validate.py  step6_report.py  test_api.py  utils.py
paper/: TYPESETTING.md  ZENODO.md  notes.md  paper.bib  paper.md
src/ssys/: __init__.py  classification.py  cli.py  formatting.py  lifting.py  math_utils.py  metadata.py  notebook_helpers.py  parsing.py  recaster.py  recasting.py  types.py  validation_schema.py  validator.py
src/ssys/_recaster/: __init__.py  algorithms.py  antimony_formatting.py  common.py  latex_formatting.py  lifting.py  names.py  parsing.py  sbml_helpers.py  templates.py
src/ssys/_validator/: __init__.py  common.py  core.py  mapping.py  numerical.py  report.py  serialization.py  state.py  symbolic.py  trajectory.py
src/ssys/ode_backends/: README.md  __init__.py  dae_backend.py  ida_sundials_backend.py  (+3 more)
test_models1/: 01_exp_decay.ant  01_truth.ant  02_logistic.ant  02_truth.ant  03_Lotka_Volterra.ant  03_truth.ant  04_mass_action_branch.ant  04_truth.ant  05_three_term_sum.ant  05_truth.ant  06_feedback.ant  06_truth.ant  07_SIR.ant  07_truth.ant  08_Bertalanffy.ant  08_truth.ant  09_A_plus_B_to_C.ant  09_truth.ant  10_truth.ant  10_van_der_Pol.ant  11_Monod_chemostat.ant  11_truth.ant  12_toy_mass_action.ant  12_truth.ant  13_composite_func_decomp.ant  13_truth.ant  14_Michaelis_Menten_prod_deg.ant  14_truth.ant  15_truth.ant  15_tryptophan_operon.ant  16_normal.ant  16_truth.ant  17_central_t.ant  17_truth.ant  18_Goodwin.ant  18_truth.ant  19_RM_predator_prey.ant  19_truth.ant  20_Briggs_Haldane.ant  20_truth.ant  (+49 more)
test_models2/: A2013_power_system_2machine.ant  A2013_power_system_3machine.ant  A2017_gompertz_recasting.ant  DN2015_planetary_motion.ant  DN2015b_michaelis_menten.ant  DN2015b_sinx_recasting.ant  HBF1998_brusselator.ant  HBF1998_morse_oscillator.ant  HBF1998_semiconductor_exciton.ant  HBF1998_three_wave.ant  I1988_metabolic_pathway.ant  KPW2024_exponential_lifting.ant  MS2007_MM_to_GMA.ant  MS2007_fermentation_yeast.ant  MS2007_tryptophan_operon.ant  P2011_branched_SC.ant  P2011_linear_pathway_MM.ant  PP2005_CSTR_arrhenius.ant  PP2005_exponential_exact.ant  RV1990_central_F.ant  RV1990_central_chisquared.ant  RV1990_central_t_density.ant  S1987_4C_exp_composition.ant  S1987_4D_sum_reduction.ant  S1987_5_CSTR.ant  S1987_A1_exponential.ant  S1987_A2_riccati.ant  S1987_A3_cos_growth.ant  S1987_A4_logistic.ant  S1987_A5_spiral.ant  S1987_B1_lotka_volterra.ant  S1987_B2_linear_chain.ant  S1987_B3_nonlinear_chain.ant  S1987_B4_torus.ant  S1987_B5_rigid_body.ant  S1987_B_binary.ant  S1987_C1_decay_chain.ant  S1987_C2_decay_chain2.ant  S1987_C3_parabolic_pde.ant  S1987_C_implicit_de.ant  (+30 more)
test_models3/: A2013_power_system_2machine.ant  A2013_power_system_3machine.ant  A2017_gompertz_recasting.ant  Bergman1989.ant  DN2015_planetary_motion.ant  DN2015b_michaelis_menten.ant  DN2015b_sinx_recasting.ant  De_Young1992.ant  Dreisigmeyer2008.ant  Fink2000.ant  Gardner2000.ant  Goldbeter1996.ant  HBF1998_brusselator.ant  HBF1998_morse_oscillator.ant  HBF1998_semiconductor_exciton.ant  HBF1998_three_wave.ant  I1988_metabolic_pathway.ant  KPW2024_exponential_lifting.ant  Kholodenko2000.ant  Krishna2006.ant  Lander2009.ant  Lev_Bar-Or2000.ant  Lipniacki2006.ant  MS2007_MM_to_GMA.ant  MS2007_fermentation_yeast.ant  MS2007_tryptophan_operon.ant  Mangan2003.ant  McMillen2002.ant  Mueller2006.ant  Ozbudak2004.ant  P2011_branched_SC.ant  P2011_linear_pathway_MM.ant  PP2005_CSTR_arrhenius.ant  PP2005_exponential_exact.ant  RV1990_central_F.ant  RV1990_central_chisquared.ant  RV1990_central_t_density.ant  Rosenfeld2002.ant  S1988_Monod_chemostat.ant  S1993_mixed_terms.ant  (+21 more)
test_models4/: Bergman1989.ant  De_Young1992.ant  Dreisigmeyer2008.ant  Fink2000.ant  Gardner2000.ant  Kholodenko2000.ant  Krishna2006.ant  Lander2009.ant  Lev_Bar-Or2000.ant  Lipniacki2006.ant  Mangan2003.ant  McMillen2002.ant  Mueller2006.ant  Ozbudak2004.ant  Rosenfeld2002.ant  Samoilov2005.ant  Selkov1968.ant  Weber2018.ant  Xiong2018.ant
tests/: 01_exp_decay.ant  01_truth.ant  02_logistic.ant  03_Lotka_Volterra.ant  04_mass_action_branch.ant  04_truth.ant  05_three_term_sum.ant  05_truth.ant  06_feedback.ant  06_truth.ant  07_SIR.ant  07_truth.ant  08_Bertalanffy.ant  09_A_plus_B_to_C.ant  09_truth.ant  10_van_der_Pol.ant  11_Monod_chemostat.ant  11_truth.ant  12_toy_mass_action.ant  13_composite_func_decomp.ant  14_Michaelis_Menten_prod_deg.ant  15_truth.ant  15_tryptophan_operon.ant  16_normal.ant  17_central_t.ant  18_Goodwin.ant  18_truth.ant  19_RM_predator_prey.ant  19_truth.ant  20_Briggs_Haldane.ant  20_truth.ant  21_Haldane_chemostat.ant  21_truth.ant  22_Brusselator.ant  22_truth.ant  23_MWC.ant  24_scalarExpLog.ant  24_truth.ant  25_CSTR.ant  25_truth.ant  (+36 more)
tools/: archive_release_evidence.py  audit_validation_blocked.py  check_critical_coverage.py  check_dependency_risk.py  check_maintainability.py  check_performance_budgets.py  check_release_metadata.py  local_artifact_smoke.py  maintainability_baseline.json  performance_budgets.json  probe_auxiliary_threshold_metadata.py  run_biomodels_benchmark.py
(+2 files in other folders)
