[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssys"
version = "0.1.0"
description = "Exact algebraic recasting of general ODEs to canonical S-system form"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = [
    "systems-biology",
    "biochemical-systems-theory",
    "s-systems",
    "power-law",
    "ode",
    "model-transformation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "sympy>=1.12",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "nbformat>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]
notebook = [
    "jupyter>=1.0",
    "ipython>=8.12",
]

[project.urls]
Homepage = "https://github.com/yourusername/ssys"
Documentation = "https://github.com/yourusername/ssys#readme"
Repository = "https://github.com/yourusername/ssys"
Issues = "https://github.com/yourusername/ssys/issues"

[project.scripts]
ssys-recast = "ssys.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ssys"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CITATION.cff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=ssys",
    "--cov-report=term-missing",
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
