[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssys"
version = "0.5.3"
description = "Exact algebraic recasting of ODEs to canonical S-system form"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD License"}
authors = [
    {name = "William S. Hlavacek", email = "hlavacek@lanl.gov"},
]
keywords = [
    "systems-biology",
    "biochemical-systems-theory",
    "s-systems",
    "power-law",
    "ode",
    "model-transformation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "sympy>=1.12",
    "numpy>=1.24,<2",  # <2 required for libroadrunner compatibility
    "scipy>=1.10",
    "matplotlib>=3.7",
    "nbformat>=5.9",
    # SBML-first architecture: these are now required for parsing
    "libroadrunner>=2.5",
    "antimony>=2.13",
    "python-libsbml>=5.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "jupyter>=1.0",
    "ipython>=8.12",
]
jax = [
    # JAX enables faster numerical validation with automatic differentiation
    # Install with: pip install ssys[jax]
    "jax>=0.4",
    "jaxlib>=0.4",
]

[project.urls]
Homepage = "https://lisdi-git.lanl.gov/hlavacek/ssys"
Documentation = "https://lisdi-git.lanl.gov/hlavacek/ssys/-/blob/main/README.md"
Repository = "https://lisdi-git.lanl.gov/hlavacek/ssys"
Issues = "https://lisdi-git.lanl.gov/hlavacek/ssys/-/issues"

[project.scripts]
ssys-recast = "ssys.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ssys"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CITATION.cff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=ssys",
    "--cov-report=term-missing",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E402",  # module level import not at top (we have intentional late imports)
    "B007",  # unused loop variable (stylistic, _var prefix is verbose)
    "B904",  # raise from None (intentional for cleaner error messages)
    "B905",  # zip without strict (legacy code, strict breaks older Python)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"src/ssys/validator.py" = ["F401"]  # pytest/jax imports for availability check
"biomodels/*.py" = ["F401", "F821"]  # type hints for optional dependencies

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # Disabled: ignores are needed for optional deps
warn_no_return = true
strict_equality = true
# Package discovery: use src layout
mypy_path = "src"
packages = ["ssys"]
# Ignore external libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "sympy",
    "sympy.*",
    "roadrunner",
    "roadrunner.*",
    "antimony",
    "antimony.*",
    "libsbml",
    "libsbml.*",
    "scipy.*",
    "jax",
    "jax.*",
]
ignore_missing_imports = true
